Populate with actual data, correct horizontal scrolling on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,4 @@
+html,
 body {
   background-color: rgb(222, 211, 211);
   position: relative;
